--- a/src/app/components/common/_Card.component.scss
+++ b/src/app/components/common/_Card.component.scss
@@ -1,9 +1,22 @@
-@import '~@styles/utils/_Mixins.scss';
+@import '~@styles/utils/mixins';
+@import '~@styles/utils/variables';
 
 .card-item {
+  background-color: $accent-color;
+  border: 2px solid black;
+  border-radius: 20px;
+  cursor: pointer;
   display: inline-block;
+  margin-right: 10px;
+  @include size(200, 200);
+  
   &__img {
-    @include size(250, 250);
-    object-fit: cover;
+    @include size(200, 200);
+    object-fit: contain;
+  }
+
+  &__details {
+    opacity: 0;
+    position: absolute;
   }
 }
