--- a/src/app/components/common/_Carousel.component.scss
+++ b/src/app/components/common/_Carousel.component.scss
@@ -1,11 +1,11 @@
 .carousel {
   overflow: scroll;
-  padding: 30px;
+  padding: 30px 30px 30px 50px;
   width: 100%;  
 
   &__container {
     white-space: nowrap;
-    margin: 70px 0;
+    margin: 50px 0;
     padding-bottom: 10px;
   }
 }
