--- a/src/app/components/common/_Card.component.scss
+++ b/src/app/components/common/_Card.component.scss
@@ -37,11 +37,19 @@
     justify-content: flex-end;
     left: 0;
     opacity: 0;
-    padding: 10px;
+    padding: 10px 10px;
     position: absolute;
     right: 0;
     transition: 450ms opacity;
     top: 0;
+    &--sub-title,
+    &--title {
+      margin: 3px 0;
+    }
+    &--sub-title {
+      font-size: 8px;
+      opacity: .5;
+    }
   }
 
   &:hover {
