--- a/src/app/components/common/_Card.component.scss
+++ b/src/app/components/common/_Card.component.scss
@@ -18,7 +18,7 @@
   &:hover ~ & {
     -webkit-transform: translate3d(50px, 0, 0);
     transform: translate3d(50px, 0, 0);
-  } 
+  }
 
   &__img {
     @include size(200, 200);
@@ -27,7 +27,11 @@
 
   &__details {
     align-items: flex-start;
-    background: linear-gradient(to top, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0.9) 0%,
+      rgba(0, 0, 0, 0) 100%
+    );
     border-radius: 18px;
     bottom: 0;
     color: white;
@@ -48,7 +52,7 @@
     }
     &--sub-title {
       font-size: 8px;
-      opacity: .5;
+      opacity: 0.5;
     }
   }
 
