--- a/src/public/styles/base/_Reset.scss
+++ b/src/public/styles/base/_Reset.scss
@@ -5,7 +5,9 @@ body {
   padding: 0px;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: content-box;
   font-family: $theme-font;
 }
