--- a/src/app/components/common/Carousel.component.scss
+++ b/src/app/components/common/Carousel.component.scss
@@ -2,6 +2,7 @@
   overflow: scroll;
   padding: 30px 30px 30px 50px;
   width: 100%;
+  position: relative;
 
   &__container {
     white-space: nowrap;
