--- a/src/app/components/common/Carousel.component.scss
+++ b/src/app/components/common/Carousel.component.scss
@@ -9,4 +9,62 @@
     margin: 50px 0;
     padding-bottom: 10px;
   }
+  &.loading {
+    overflow: hidden;
+  }
+  .skeleton {
+    width: 214px;
+    height: 258px;
+    border-radius: 20px;
+    background-repeat: no-repeat;
+    display: inline-block;
+    margin-right: 10px;
+    background-size:
+      32px 32px,
+      40px 40px,
+      120px 120px,
+      200px,
+      128px 128px,
+      100% 100%;
+    background-position:
+      50% 50%,
+      50% 50%,
+      50% 9px,
+      -150px 0,
+      50% 50%, 
+      0 0;        /* card bg */
+    background-image: 
+    /* layer 4: center circle*/
+    radial-gradient(circle 16px, white 99%, transparent 0),
+    /* layer 3: center circle*/
+    radial-gradient(circle 20px, gray 99%, transparent 0),
+    /* layer 2: circle */
+    radial-gradient(circle 60px at 50% 100%, #d35d6e 99%, transparent 0),
+    linear-gradient(
+      90deg, 
+      rgba(lightgray, 0) 0, 
+      rgba(lightgray, .3) 40%,
+      rgba(lightgray, .8) 60%,
+      rgba(lightgray, .3) 80%,
+      rgba(lightgray, 0) 100%
+    ), 
+    /* layer 1: circle */
+    radial-gradient(circle 64px, white 99%, transparent 0),
+    /* layer 0: card bg */
+    /* gray rectangle that covers whole element */
+    linear-gradient(gray 100%, transparent 0);
+    animation: loading 1.5s infinite;
+  }
+}
+
+@keyframes loading {
+  to {
+    background-position: 
+      50% 50%,
+      50% 50%,
+      50% 9px,
+      350% 0,
+      50% 50%, 
+      0 0;
+  }
 }
