--- a/src/app/components/common/Card.component.scss
+++ b/src/app/components/common/Card.component.scss
@@ -13,6 +13,7 @@
   margin-right: 10px;
   padding: 25px 5px;
   position: relative;
+  animation: fadein .7s;
 
   &:hover ~ & {
     -webkit-transform: translate3d(50px, 0, 0);
