adding dispatcher to add new pokemons

--- a/src/app/components/common/LoadingDots.scss
+++ b/src/app/components/common/LoadingDots.scss
@@ -10,6 +10,7 @@
   justify-content: center;
   align-items: center;
   background: rgba(255, 255, 255, 0.2);
+  width: 100%;
 }
 
 ul.loading-dots {
