--- a/src/public/styles/utils/_animations.scss
+++ b/src/public/styles/utils/_animations.scss
@@ -2,3 +2,19 @@
   from { opacity: 0; }
   to   { opacity: 1; }
 }
+
+@keyframes fadeout {
+  to { opacity: 0; }
+  from { opacity: 1; }
+}
+
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
