--- a/src/app/components/common/Card.component.scss
+++ b/src/app/components/common/Card.component.scss
@@ -46,8 +46,10 @@
     right: 0;
     transition: 450ms opacity;
     top: 0;
+    &--icons {
+      display: flex;
+    }
     &--plus-icon {
-      display: inline-block;
       height: 20px;
       transition: transform 0.3s ease;
       width: 20px;
@@ -65,7 +67,6 @@
       background: #c45d4c;
       border-radius: 50%;
       color: white;
-      display: inline-block;
       height: 20px;
       position: relative;
       transition: transform 0.3s ease;
@@ -75,7 +76,7 @@
         font-size: 20px;
         position: absolute;
         top: 50%;
-        transform: translate(-50%, -72%);
+        transform: translate(-50%, -70%);
         left: calc(50%);
       }
       &:hover {
