--- a/src/app/components/common/Carousel.component.scss
+++ b/src/app/components/common/Carousel.component.scss
@@ -1,13 +1,15 @@
 .carousel {
   overflow: auto;
-  padding: 30px 30px 30px 50px;
+  padding: 0px 30px 10px 50px;
   width: 100%;
   position: relative;
+  animation: slide-up 2s;
 
   &__container {
     white-space: nowrap;
     margin: 50px 0;
     padding-bottom: 10px;
+    min-height: 268px;
   }
   &.loading {
     overflow: hidden;
@@ -66,5 +68,17 @@
       350% 0,
       50% 50%, 
       0 0;
+  }
+}
+
+.empty-list-placeholder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  img {
+    margin: 10px 0;
+    height: 50px;
+    width: 50px;
   }
 }
