--- a/src/app/components/common/Card.component.scss
+++ b/src/app/components/common/Card.component.scss
@@ -49,7 +49,7 @@
     &--icons {
       display: flex;
     }
-    &--plus-icon {
+    &--icon {
       height: 20px;
       transition: transform 0.3s ease;
       width: 20px;
@@ -64,7 +64,32 @@
     &--more-icon {
       // background: white;
       // border-radius: 50px;
-      background: #c45d4c;
+      background: #145f74;
+      border-radius: 50%;
+      color: white;
+      height: 20px;
+      position: relative;
+      transition: transform 0.3s ease;
+      width: 20px;
+      &::after {
+        content: '...';
+        font-size: 20px;
+        position: absolute;
+        top: 50%;
+        transform: translate(-50%, -67%);
+        left: calc(50%);
+      }
+      &:hover {
+        transform: scale(1.2);
+      }
+      &:active {
+        transform: scale(1.1);
+      }
+    }
+    &--minus-icon {
+      // background: white;
+      // border-radius: 50px;
+      background: #145f74;
       border-radius: 50%;
       color: white;
       height: 20px;
