--- a/src/public/styles/components/_Carousel.scss
+++ b/src/public/styles/components/_Carousel.scss
@@ -15,6 +15,20 @@
     margin: 50px 0;
     padding-bottom: 10px;
     min-height: 268px;
+
+    .card-item {
+      &:hover ~ .card-item {
+        -webkit-transform: translate3d(50px, 0, 0);
+        transform: translate3d(50px, 0, 0);
+      }
+      &:hover {
+        -webkit-transform: scale(1.5);
+        transform: scale(1.5);
+        .card-item__details {
+          opacity: 1;
+        }
+      }
+    }
   }
   &.loading {
     overflow: hidden;
