--- a/src/public/styles/base/_Typography.scss
+++ b/src/public/styles/base/_Typography.scss
@@ -1,3 +1,3 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@500&display=swap');
 
-$theme-font: 'Mulish', sans-serif;
+$theme-font: 'Lato', sans-serif;
