--- a/src/public/styles/pages/_PokemonDetails.scss
+++ b/src/public/styles/pages/_PokemonDetails.scss
@@ -1,26 +1,68 @@
-.data-container {
-    background-color: #ebebeb;
-    border: solid thin;
-    border-radius: 10px;
-    height: 250px;
+@import '~@styles/utils/variables';
+@import '~@styles/utils/mixins';
 
-    .stats-table {
+@each $name, $color in $pokemon-color {
+    .border-#{$name} {
+        background-color: $color;
+    }
+}
+
+.data-container {
+    background-color: white;
+    border-radius: 10px;
+    height: auto;
+    font-size: 20px;
+
+    &--img {
+        @include size(400);
+        margin: 50px;
+    }
+
+    .pokemon-info--name {
+        text-align: center;
+        font-size: 30px;
+        font-weight: 900;
+    }
+
+    .data-table {
         align-items: center;
         display: grid;
-        font-size: 20px;
-        grid-template-columns: 1fr 35px 1fr 35px;
-        grid-template-rows: repeat(3, 50px);
+        grid-template-columns: 1fr auto 1fr auto;
         grid-gap: 0px 15px;
         padding: 15px;
         text-align: left;
-    
-    
-        .stats-table--label {
-            font-weight: 800;
-        }
-    
-        .stats-table--data {
-            font-weight: 300;
-       }
     }
+
+    .badge-container {
+        margin: 10px 0px 30px 0px;
+        .badge-type--label {
+            font-weight: 800;
+            padding: 15px;
+            width: 200px;
+        }
+        .type-badge {
+            border-radius: 5px;
+            color: white;
+            font-weight: 900;
+            margin: 5px;
+            padding: 3px 10px;
+        }
+    }
+
+    .stats-table {
+        grid-template-rows: repeat(3, 50px);
+    }
+
+    .stats-title {
+        font-weight: 900;
+        margin-bottom: 20px;
+    }
+
+    .table-label {
+        font-weight: 800;
+    }
+
+    .table-data {
+        font-weight: 300;
+   }
 }
