fix aliases issue

--- a/src/public/styles/pages/_PokemonDetails.scss
+++ b/src/public/styles/pages/_PokemonDetails.scss
@@ -1,5 +1,5 @@
-@import '~@styles/utils/variables';
-@import '~@styles/utils/mixins';
+@import '../utils/variables';
+@import '../utils/mixins';
 
 @each $name, $color in $pokemon-color {
     .border-#{$name} {
