--- a/src/public/styles/components/_Card.scss
+++ b/src/public/styles/components/_Card.scss
@@ -1,5 +1,5 @@
-@import '~@styles/utils/mixins';
-@import '~@styles/utils/variables';
+@import '../utils/mixins';
+@import '../utils/variables';
 
 .card-item {
   // $ns = .card-item
