fix aliases issue

--- a/src/public/styles/pages/_PokemonDetails.scss
+++ b/src/public/styles/pages/_PokemonDetails.scss
@@ -1,5 +1,4 @@
-@import '../utils/variables';
-@import '../utils/mixins';
+@import '../utils/Index';
 
 @each $name, $color in $pokemon-color {
     .border-#{$name} {
