--- a/src/public/styles/utils/_Index.scss
+++ b/src/public/styles/utils/_Index.scss
@@ -1,3 +1,3 @@
-@import './animations';
-@import './mixins';
-@import './variables';
+@import './Animations';
+@import './Mixins';
+@import './Variables';
